--- a/mttest.properties
+++ b/mttest.properties
@@ -35,3 +35,6 @@ host_android_top=<path to Android host>
 device_exec_folder=/data/mttest
 # Storage on Device.
 device_data_folder=/sdcard/mttest
+
+# Remove unused classes using Proguard (true/false, only for Android)
+use_proguard=true
